feat(auth): grant request spc start interaction
